add charactrer class and character design

--- a/inde.html
+++ b/inde.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,40 @@
     <link rel="stylesheet" href="asset/css/styles.css">
     <title>Rick And Morty</title>
 </head>
+
 <body>
-    
-    <script src="asset/js/app.js"></script>
+    <img class="logo" src="asset/img/logo@2x.png" alt="">
+    <div id="character-container">
+
+    </div>
+    <aside class="navigation">
+        <span>Name</span>
+        <span>About</span>
+        <span class="asset">
+            <span class="line"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+        </span>
+    </aside>
+    <div class="whapper">
+        <article class="character">
+            <div class="character-grid">
+                <img class="character-image" src="https://rickandmortyapi.com/api/character/avatar/1.jpeg" alt="">
+                <div class="character-name">
+                    <h2>Rick Sanchez</h2>
+                </div>
+                <div class="character-labels">
+                    <h3 class="character-label">Genero</h3>
+                    <h3 class="character-label">Especie</h3>
+                    <h3 class="character-label">Estatus</h3>
+                </div>
+
+            </div>
+        </article>
+    </div>
+
+    <!-- <script type="module" src="asset/js/app.js"></script> -->
 </body>
+
 </html>
